# kontact

./: .clang-tidy  .craft.ini  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .krazy  .pre-commit-config.yaml  CMakeLists.txt  DESIGN.dbusinteraction  DESIGN.dcopinteraction  HACKING  Mainpage.dox  Makefile.am  Messages.sh  TODO  Thoughts  cppcheck-suppressions.xml  kontact.categories  kontact.renamecategories  snapcraft.yaml
interfaces/: CMakeLists.txt  Makefile.am  core.cpp  core.h  kontact_export.h  kontactplugin.desktop  plugin.cpp  plugin.h  summary.cpp  summary.h  uniqueapphandler.cpp  uniqueapphandler.h
plugins/: CMakeLists.txt  Makefile.am
plugins/akregator/: CMakeLists.txt  Makefile.am  akregator.desktop  akregator.setdlg  akregator_plugin.cpp  akregator_plugin.h  akregatorplugin.desktop  akregatorplugin3.2.desktop  uniqueapphandler.cpp  uniqueapphandler.h
plugins/kaddressbook/: CMakeLists.txt  Makefile.am  Messages.sh  kabsummarywidget.cpp  kabsummarywidget.h  kaddressbook.setdlg  kaddressbook_plugin.cpp  kaddressbook_plugin.desktop  kaddressbook_plugin.h  kaddressbookplugin.desktop  kcmkabsummary.cpp  kcmkabsummary.desktop  kcmkabsummary.h  kpkaddressbookplugin.desktop  kpkaddressbookplugin.rc
plugins/karm/: CMakeLists.txt  Makefile.am  karm_plugin.cpp  karm_plugin.h  karmplugin.desktop
plugins/kcontactmanager/: CMakeLists.txt  kcontactmanager.setdlg  kcontactmanager_plugin.cpp  kcontactmanager_plugin.desktop  kcontactmanager_plugin.h
plugins/kitchensync/: CMakeLists.txt  Makefile.am  kitchensync.desktop  kitchensync_plugin.cpp  kitchensync_plugin.h
plugins/kjots/: CMakeLists.txt  kjots.setdlg  kjots_plugin.cpp  kjots_plugin.desktop  kjots_plugin.h
plugins/kmail/: CMakeLists.txt  Makefile.am  Messages.sh  kcmkmailsummary.cpp  kcmkmailsummary.desktop  kcmkmailsummary.h  kmail.setdlg  kmail_plugin.cpp  kmail_plugin.h  kmailplugin.desktop  kpkmailplugin.desktop  kpkmailplugin.rc  summarywidget.cpp  summarywidget.h
plugins/kmobiletools/: CMakeLists.txt  kmobiletools.desktop  kmobiletools.setdlg  kmobiletools_plugin.cpp  kmobiletools_plugin.h
plugins/knode/: CMakeLists.txt  Makefile.am  knode.setdlg  knode_plugin.cpp  knode_plugin.h  knodeplugin.desktop  kpknodeplugin.desktop  kpknodeplugin.rc
plugins/knotes/: CMakeLists.txt  Makefile.am  Makefile.in  Messages.sh  kcmknotessummary.cpp  kcmknotessummary.desktop  kcmknotessummary.h  knotes.setdlg  knotes_kontact_plugin_debug.cpp  knotes_kontact_plugin_debug.h  knotes_part.cpp  knotes_part.h  knotes_part.rc  knotes_part_p.h  knotes_plugin.cpp  knotes_plugin.h  knoteseditdialog.cpp  knoteseditdialog.h  knotesiconview.cpp  knotesiconview.h  knoteslistwidgetsearchline.cpp  knoteslistwidgetsearchline.h  knotesplugin.desktop  knotesselectdeletenotesdialog.cpp  knotesselectdeletenotesdialog.h  knoteswidget.cpp  knoteswidget.h  knotetip.cpp  knotetip.h  kpknotesplugin.desktop  kpknotesplugin.rc  org.kde.kontact.KNotes.xml  summarywidget.cpp  summarywidget.h
plugins/knotes2/: CMakeLists.txt  kcmknotessummary.cpp  kcmknotessummary.desktop  kcmknotessummary.h  knotes2plugin.desktop  knotes_part.cpp  knotes_part.h  knotes_plugin.cpp  knotesiconview.cpp  knotesiconview.h  knotesselectdeletenotesdialog.cpp  knotesselectdeletenotesdialog.h  knoteswidget.cpp  summarywidget.cpp  summarywidget.h
plugins/korganizer/: CMakeLists.txt  Makefile.am  Messages.sh  apptsummaryconfig_base.ui  apptsummarywidget.cpp  apptsummarywidget.h  journalplugin.cpp  journalplugin.desktop  journalplugin.h  kcmapptsummary.cpp  kcmapptsummary.desktop  kcmapptsummary.h  kcmkorgsummary.cpp  kcmkorgsummary.desktop  kcmkorgsummary.h  kcmtodosummary.cpp  kcmtodosummary.desktop  kcmtodosummary.h  korg_uniqueapp.cpp  korg_uniqueapp.h  korganizer.setdlg  korganizer_plugin.cpp  korganizer_plugin.h  korganizerplugin.cpp  korganizerplugin.desktop  korganizerplugin.h  kpkorganizerplugin.desktop  kpkorganizerplugin.rc  stdcalendar.h  summaryeventinfo.cpp  summaryeventinfo.h  summarywidget.cpp  summarywidget.h  todoplugin.cpp  todoplugin.desktop  todoplugin.h  todosummaryconfig_base.ui  todosummarywidget.cpp  todosummarywidget.h
plugins/kpilot/: CMakeLists.txt  Makefile.am  kpilot_plugin.cpp  kpilot_plugin.h  kpilotplugin.desktop  pilotDaemonDCOP.h  summarywidget.cpp  summarywidget.h
plugins/ktimetracker/: CMakeLists.txt  karm_plugin.cpp  karm_plugin.h  karmplugin.desktop  ktimetracker.setdlg  ktimetracker_plugin.cpp  ktimetracker_plugin.desktop  ktimetracker_plugin.h
plugins/multisynk/: CMakeLists.txt  Makefile.am  karm_plugin.cpp  multisynk.desktop  multisynk_plugin.cpp  multisynk_plugin.h
plugins/newsticker/: CMakeLists.txt  Makefile.am  Messages.sh  kcmkontactknt.cpp  kcmkontactknt.desktop  kcmkontactknt.h  newsfeeds.h  newsticker.setdlg  newsticker_plugin.cpp  newsticker_plugin.h  newstickerplugin.desktop  summarywidget.cpp  summarywidget.h
plugins/planner/: CMakeLists.txt  Makefile.am  kcmplanner.cpp  kcmplanner.desktop  kcmplanner.h  planner.cpp  planner.h  planner.setdlg  planner.ui  plannerconfig_base.ui  plannerplugin.cpp  plannerplugin.desktop  plannerplugin.h  stdcalendar.cpp
plugins/specialdates/: CMakeLists.txt  Makefile.am  Messages.sh  kcmsdsummary.cpp  kcmsdsummary.desktop  kcmsdsummary.h  sdsummaryconfig_base.ui  sdsummarywidget.cpp  sdsummarywidget.h  specialdates.setdlg  specialdates_plugin.cpp  specialdates_plugin.h  (+1 more)
src/: CMakeLists.txt  Kaplan.desktop  Kontact.appdata.xml  Kontact.desktop  Makefile.am  aboutdialog.cpp  aboutdialog.h  config-kdepim.h.cmake  config-kontact.h.in  core.cpp  core.h  embedtool.cpp  html.cpp  iconsidepane.cpp  iconsidepane.h  introductionwebenginepage.cpp  introductionwebenginepage.h  introductionwebview.cpp  introductionwebview.h  kaplanrc  kaplanui.rc  kcmkontact.cpp  kcmkontact.h  kontact-version.h.cmake  kontact-version.h.in  kontact.kcfg  kontact.qrc  kontact.setdlg  kontact_debug.cpp  kontact_debug.h  kontact_export.h  kontactconfig.desktop  kontactconfiguredialog.cpp  kontactconfiguredialog.h  kontactdcop.desktop  kontactiface.h  kontactui.rc  main.cpp  mainwindow.cpp  mainwindow.h  (+18 more)
(+183 files in other folders)
