remove_definitions(-DKDE_DEFAULT_DEBUG_AREA=5600) #remove kontact debug area
add_definitions(-DKDE_DEFAULT_DEBUG_AREA=5602)

if(QGPGME_FOUND)
  if(BUILD_kmail)
    add_subdirectory( kmail )
  endif(BUILD_kmail)
  if (BUILD_kmail AND BUILD_korganizer )
    add_subdirectory( korganizer )
  endif (BUILD_kmail AND BUILD_korganizer )
  add_subdirectory( summary )
  add_subdirectory( specialdates )
#AKONADI_PORT: planner
#  add_subdirectory( planner )
endif(QGPGME_FOUND)
if (BUILD_knotes AND KDEPIMLIBS_KRESOURCES_LIBS AND QT_QT3SUPPORT_FOUND)
  add_subdirectory( knotes )
endif (BUILD_knotes AND KDEPIMLIBS_KRESOURCES_LIBS AND QT_QT3SUPPORT_FOUND)
if (BUILD_knode AND QT_QT3SUPPORT_FOUND)
  add_subdirectory( knode )
endif (BUILD_knode AND QT_QT3SUPPORT_FOUND)
if (BUILD_kjots)
  add_subdirectory( kjots )
endif (BUILD_kjots)
if (BUILD_akregator AND QT_QT3SUPPORT_FOUND)
  add_subdirectory( akregator )
endif (BUILD_akregator AND QT_QT3SUPPORT_FOUND)
if(BUILD_ktimetracker AND QT_QT3SUPPORT_FOUND)
  add_subdirectory( ktimetracker )
endif(BUILD_ktimetracker AND QT_QT3SUPPORT_FOUND)
if(BUILD_kaddressbook)
  add_subdirectory(kaddressbook)
endif(BUILD_kaddressbook)

